--- a/temp.html
+++ b/temp.html
@@ -1,1 +1,10 @@
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem eligendi, id ipsum iusto possimus quasi quibusdam tenetur. Autem consectetur distinctio dolor ea eius enim error excepturi fugiat harum, illo, ipsa omnis optio placeat quasi quibusdam totam vel veniam voluptatum. Aperiam atque eos impedit iure laboriosam modi, molestias velit voluptates! Ad asperiores commodi culpa dicta eius, iste nostrum perspiciatis quae! Autem esse fuga, id laborum maxime, nemo neque odio pariatur quisquam ratione ullam vero vitae voluptas. Commodi debitis dicta dolorum fugit libero neque praesentium sit, vel. Aperiam earum iure libero quisquam saepe sequi temporibus. Doloremque ea laborum perferendis recusandae suscipit voluptatum.
+
+
+Mail:raw('cukurukuk', function($m) {
+$m->to('cs@kastara.co.id');
+})
+
+Illuminate\Support\Facades\Mail::send('mail.contact', [], function ($message) {
+$message->to('your_mailtrap_inbox@example.com', 'Your Name')->subject('Test Email');
+});
